; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmstypes.c_Type_vcgt_Free.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmstypes.c_Type_vcgt_Free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._cms_typehandler_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct._cms_typehandler_struct*, i8*)* @Type_vcgt_Free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Type_vcgt_Free(i32 %0, %struct._cms_typehandler_struct* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct._cms_typehandler_struct*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store %struct._cms_typehandler_struct* %1, %struct._cms_typehandler_struct** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct._cms_typehandler_struct*, %struct._cms_typehandler_struct** %5, align 8
  %8 = call i32 @cmsUNUSED_PARAMETER(%struct._cms_typehandler_struct* %7)
  %9 = load i32, i32* %4, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to i32**
  %12 = call i32 @cmsFreeToneCurveTriple(i32 %9, i32** %11)
  %13 = load i32, i32* %4, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @_cmsFree(i32 %13, i8* %14)
  ret void
}

declare dso_local i32 @cmsUNUSED_PARAMETER(%struct._cms_typehandler_struct*) #1

declare dso_local i32 @cmsFreeToneCurveTriple(i32, i32**) #1

declare dso_local i32 @_cmsFree(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
